[footer][xs]: fixed not sticky footer bug - refs #96
* re-implemented fix of overlapping footer as it caused another bug after which the footer became unsticky. Simply increased padding-bottom of body element so now we have enough space for the footer.

--- a/public/sass/_docs.scss
+++ b/public/sass/_docs.scss
@@ -1,4 +1,8 @@
 body.docs {
+  div.row {
+    margin-left: 0;
+    margin-right: 0;
+  }
   .docs-section {
     margin: 50px 0 130px 0;
     div {
