--- a/public/sass/_generals.scss
+++ b/public/sass/_generals.scss
@@ -7,7 +7,7 @@ html {
 body {
   position: relative;
   min-height: 100%;
-  padding-bottom: 82px;
+  padding-bottom: 122px;
   @media (max-width: $screen-xs-min) {
     .row {
       margin-left: 0;
